--- a/Resources/UI/MOOSEExtension.ui
+++ b/Resources/UI/MOOSEExtension.ui
@@ -14,7 +14,19 @@
    <string>MOOSE Extension</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
-   <!-- Input Volume -->
+   <item>
+    <widget class="QLabel" name="label">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Selected Image:</string>
+     </property>
+    </widget>
+   </item>
    <item>
     <widget class="qMRMLNodeComboBox" name="inputSelector">
      <property name="toolTip">
@@ -25,28 +37,26 @@
        <string>vtkMRMLScalarVolumeNode</string>
       </stringlist>
      </property>
+     <property name="showHidden">
+      <bool>false</bool>
+     </property>
      <property name="showChildNodeTypes">
       <bool>false</bool>
      </property>
      <property name="noneEnabled">
       <bool>false</bool>
      </property>
-     <property name="selectNodeUponCreation">
-      <bool>true</bool>
-     </property>
-     <property name="showHidden">
+     <property name="addEnabled">
       <bool>false</bool>
      </property>
      <property name="renameEnabled">
       <bool>true</bool>
      </property>
-     <property name="addEnabled">
-      <bool>false</bool>
+     <property name="selectNodeUponCreation">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
-
-   <!-- Model Selection -->
    <item>
     <widget class="QComboBox" name="modelsSelector">
      <property name="toolTip">
@@ -67,8 +77,19 @@
      </item>
     </widget>
    </item>
-
-   <!-- Output Directory -->
+   <item>
+    <widget class="QLabel" name="label_2">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Output Directory:</string>
+     </property>
+    </widget>
+   </item>
    <item>
     <widget class="ctkDirectoryButton" name="outputDirectoryButton">
      <property name="toolTip">
@@ -76,33 +97,36 @@
      </property>
     </widget>
    </item>
-
-   <!-- CUDA Acceleration -->
-   <item>
-    <widget class="QCheckBox" name="useCudaCheckbox">
-     <property name="text">
-      <string>Use CUDA (GPU Acceleration)</string>
-     </property>
-     <property name="toolTip">
-      <string>Enable this option for faster processing if GPU is available.</string>
-     </property>
-    </widget>
-   </item>
-
-   <!-- Run Button -->
    <item>
     <widget class="QPushButton" name="runButton">
-     <property name="text">
-      <string>Run Segmentation</string>
-     </property>
      <property name="enabled">
       <bool>true</bool>
      </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string>Run Segmentation</string>
+     </property>
     </widget>
+   </item>
+   <item>
+    <widget class="QPlainTextEdit" name="statusLabel"/>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ctkDirectoryButton</class>
+   <extends>QWidget</extends>
+   <header>ctkDirectoryButton.h</header>
+  </customwidget>
+  <customwidget>
+   <class>qMRMLNodeComboBox</class>
+   <extends>QWidget</extends>
+   <header>qMRMLNodeComboBox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
-
